# rocket-api

./: .gitignore  Cargo.toml  Dockerfile  README  docker-compose.yml
src/: lib.rs  main.rs
src/routes/: hello.rs  mod.rs  post.rs
tests/: basic_test.rs
tests/common/: mod.rs
