[package]
name = "rocket-api"
version = "0.1.0"
authors = ["genekuo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde = { version = "1.0.118", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["serve", "helmet", "json"]
